--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react": "17.0.2",
     "react-apexcharts": "1.4.0",
     "react-custom-scrollbars-2": "4.4.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "watermark-js-plus": "^1.3.35"
   },
   "scripts": {
     "dev": "next",
